--- a/gb/20/9/6/n12384673.md
+++ b/gb/20/9/6/n12384673.md
@@ -1,16 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xpxtxh3586/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xpxtxh3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xpxtxh3586/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xpxtxh3586/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xpxtxh3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉： 川普说与普京相处融洽 对北京意味什么？</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>周晓辉：川普说与普京相处融洽对北京意味什么</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1143776832-600x400-1.jpg" />
 <h6>美国国务卿蓬佩奥（Mike Pompeo）与俄罗斯外长拉夫罗夫（Sergei Lavrov）。(PAVEL GOLOVKIN/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年09月07日讯】9月5日，美国总统川普（特朗普）在白宫例行新闻发布会上，说了一段耐人寻味的话，表达了如下三个意思：</p>
-<p>一、我们（美国）与很多国家在很多问题上密切合作，我们对俄罗斯采取的行动比任何国家都强硬，普京总统现在可以告诉你们这一点。 但尽管如此，我和俄罗斯相处融洽。</p>
-<p>二、我与全世界所有国家都相处融洽，除了中国以外。这是我的选择，因为他们造成病毒大流行让我很不满，完完全全的不满。他们对美国、欧洲和世界其他地区的所作所为，实在是太糟糕了。</p>
-<p>三、强调与普京总统相处融洽。</p>
-<p>这段话的重点是川普一方面刻意强调与俄罗斯、与普京关系融洽，少有的直面与普京的关系，另一方面暗示因为疫情问题，与北京、与习近平关系并不融洽。这是继其8月11日在接受采访时表示在瘟疫大流行之后，他对习近平的看法已经改变，且很长一段时间都没有与习通话后，再一次表态川习曾经的“友谊”、曾经“保持的非常好的关系”已经一去不复返了。</p>
+	<p>【大纪元2020年09月07日讯】9月5日，美国总统<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>（特朗普）在白宫例行新闻发布会上，说了一段耐人寻味的话，表达了如下三个意思：</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 170px; margin-bottom: 20px; border-radius: 10px; overflow:hidden;"><a style="width: 100%; height: 170px;" frameborder="no" allow="autoplay" scrolling="no" seamless src="https://player.captivate.fm/episode/b49ca27c-7432-49ed-ac20-9f7901626896"></a></div>
+<p>一、我们（美国）与很多国家在很多问题上密切合作，我们对俄罗斯采取的行动比任何国家都强硬，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>总统现在可以告诉你们这一点。 但尽管如此，我和俄罗斯相处融洽。</p>
+<p>二、我与全世界所有国家都相处融洽，除了中国以外。这是我的选择，因为他们造成病毒大流行让我很不满，完完全全的不满。他们对美国、欧洲和世界其它地区的所作所为，实在是太糟糕了。</p>
+<p>三、强调与<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>总统相处融洽。</p>
+<p>这段话的重点是<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>一方面刻意强调与俄罗斯、与普京关系融洽，少有地直面与普京的关系，另一方面暗示因为疫情问题，与北京、与习近平关系并不融洽。这是继其8月11日在接受采访时表示在瘟疫大流行之后，他对习近平的看法已经改变，且很长一段时间都没有与习通话后，再一次表态川习曾经的“友谊”、曾经“保持的非常好的关系”已经一去不复返了。</p>
 <p>川普将与普京和与习近平的关系现状貌似在不经意间说出，但背后却是有文章的。众所周知，自2016年以来，美国反川普人士一直在炒作“通俄门”，指俄罗斯更希望川普当选，并由普京亲自下令一个“影响行动”干预美国大选，还与川普竞选团队勾结。尽管川普和普京一再否认“通俄门”事件，但美国情报当局还是展开了调查。</p>
 <p>在这样的背景下，倾向于与普京搞好关系的川普，也只能避免与普京有过多的接触。2019年4月18日，美国司法部公布的经过删节的“通俄门”调查报告，证实了川普竞选团队没有在2016年总统选举期间“通俄”，还了川普清白，而且有证据表明，很多证据是伪造的，且牵扯到奥巴马时期的政府官员和克林顿竞选团队成员。</p>
 <p>自此之后，美俄高层互动增加。去年12月10日，美国国务卿蓬佩奥、川普在华盛顿先后与到访的俄罗斯外交部长拉夫罗夫举行了会谈，涉及的议题包括延长《新削减战略武器条约》、《中导条约》、核军控、俄美贸易合作、朝鲜半岛局势、叙利亚问题、委内瑞拉和乌克兰东部局势等。</p>
@@ -23,7 +25,7 @@
 <p>4月25日，川普与普京发表了一份联合声明，强调“易北河精神”是“我们各国如何抛弃分歧，建立信任并进行合作以追求更大事业的一个例子”。“抛弃分歧”、“建立信任并进行合作以追求更大事业”指的是什么？</p>
 <p>在川普政府指出中共是世界上最大的威胁，并全面采取反制措施，同时打造世界反共同盟后，川普公开传递自己与普京关系良好的信息就不简单了，那就是在美国反共、灭共这条路上，在追究中共将病毒散播到全世界的问题上，被中共视为“新时代全面战略协作伙伴”的俄罗斯不会成为掣肘，即川普与普京极有可能已经在某些问题上达成了默契，俄中不会结盟。</p>
 <p>事实上，了解共产政权邪恶的普京出于政治、经济上的考虑，也是倾向于改善俄美关系，并有意保持与北京的距离和戒心。比如对于美中贸易战，俄总统发言人就在去年习近平访俄前表示“这不是我们的战争”，即事不关己，高高挂起。对于北京的反美言论和举措，也是缄默居多，偶尔才出于面子不痛不痒的表示一下支持。至于中共高调推出的“一带一路”，莫斯科则是给足面子，但少见行动。不仅如此，今年莫斯科与北京的互动较之莫斯科与华盛顿更是见少。</p>
-<p>普京的选择对于北京而言，一定感觉到心底哇凉哇凉的。要知道，在美国的重压下，北京面临的外部环境可是远比两年前糟糕的多。现如今，欧盟日趋强硬，中东走向新的和平，日本、印度、澳大利亚紧随美国，亚太地区正打造“小北约”，拉美趋于稳定，非洲多国也因为疫情对北京怨气多多，而川普与普京相处融洽，向北京释放的是何信息，中南海是心知肚明。</p>
+<p>普京的选择对于北京而言，一定感觉到心底瓦凉瓦凉的。要知道，在美国的重压下，北京面临的外部环境可是远比两年前糟糕的多。现如今，欧盟日趋强硬，中东走向新的和平，日本、印度、澳大利亚紧随美国，亚太地区正打造“小北约”，拉美趋于稳定，非洲多国也因为疫情对北京怨气多多，而川普与普京相处融洽，向北京释放的是何信息，中南海是心知肚明。</p>
 <p>无疑，不仅是逆风逆水，北京孤家寡人的处境正在坐实，这样的处境还能有什么结果呢？</p>
 <p>责任编辑：莆山</p>
 	
@@ -31,42 +33,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/19/12/12/n11719217.md#1">周晓辉：美俄外长透秘密 北京窝心口难言</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/5/26/n12139031.md#1">王友群：大瘟疫后美俄关系将发生重大变化</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/8/4/n12304843.md#1">美中关系恶化 分析：美台关系“拨云见日”</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/8/7/n12314824.md#1">美中关系恶化 裴敏欣：习近平始料未及</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/12/n11719217.md#1">周晓辉：美俄外长透秘密 北京窝心口难言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/26/n12139031.md#1">王友群：大瘟疫后美俄关系将发生重大变化</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/4/n12304843.md#1">美中关系恶化 分析：美台关系“拨云见日”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/7/n12314824.md#1">美中关系恶化 裴敏欣：习近平始料未及</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/22/n11340254.md#1" target="_blank">林辉：抗共而逝的香港前主播让亲共港媒汗颜</a></li><li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066862.md#1" target="_blank">智效民：著名物理学家饶毓泰的悲剧</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/9/n7982398.md#1" target="_blank">大陆教师：婆婆神奇经历改变我的世界观</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/6/13/n12183566.md#1">贾雨村，一个从来不曾过时的现实主义者</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/8/26/n12358223.md#1">中元节民俗缘何来？为何建醮普渡？</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/6/n12384280.md#1">【纪元播报】纳瓦罗：除微信TikTok外 将瞄准更多中国APP</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/6/n12383355.md#1">【大选观察】谁想干预大选？川普高官齐指中共</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/5/n12382539.md#1">【纪元播报】蓬佩奥：几周内推出更多限制中国学生政策</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12380525.md#1">网传共机遭台湾击落 台湾空军回应相关讯息</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/3/n12378843.md#1">【新闻看点】中共少将泄疫苗真相？地下钱庄探秘</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12379422.md#1">【拍案惊奇】王岐山被低调？内蒙人脸识别抓人</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/3/n12378551.md#1">郭美美出狱后换脸改名 开设新账号重新炫富</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/3/n12379060.md#1">小花为何要求全家听她念书 孙俪爆逗趣原因</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12379936.md#1">邰智源总统府站哨 蔡英文：今天的宪兵胖了点</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12381220.md#1">中共恐吓捷克和打压台湾 电视名嘴狠酸获赞爆</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/5/n12383230.md#1">台影迷抵制刘亦菲《花木兰》 港网友感动致谢</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12381103.md#1">练腹肌不能瘦小腹？减腹部脂肪1种运动最有效</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/5/n12382103.md#1">车评：视觉与听觉冲击 2020 Toyota Camry TRD</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/4/n12379905.md#1">法国女子的变装戏法 迷住老牌魔术师的眼睛</a></li>
-<li><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/3/n12378940.md#1">有平民之风的黄芪 在日常的4个妙用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xpxtxh3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xpxtxh3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/6/n12384673.htm">周晓辉： 川普说与普京相处融洽 对北京意味什么？</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/6/n12384673.htm">周晓辉：川普说与普京相处融洽对北京意味什么</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/xpxtxh3586/djy/blob/master/gb/20/9/6/n12384673.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xpxtxh3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xpxtxh3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xpxtxh3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xpxtxh3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/6/n12384673.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
